fix: overflow y

--- a/components/Search/SearchDialog/SearchDialog.module.scss
+++ b/components/Search/SearchDialog/SearchDialog.module.scss
@@ -33,60 +33,43 @@
 .container {
     position: relative;
     display: block;
+    //overflow: hidden;
 
     width: 90%;
     max-width: 700px;
+    max-height: 500px;
     border: 1px solid rgba(0,0,0,.1);
     border-radius: .5rem;
-    background-color: rgba(0,0,0,.05);
-    height: 60rem;
+    //background-color: rgba(0,0,0,.05);
+    background-color: var(--color-palesmoke);
+    height: 500px;
+    padding: 1rem;
 
     @media screen and (max-width: 768px), (max-height: 700px) {
-        width: 100%;
-        height: 100%;
-        max-width: none;
         position: fixed;
         top: 0;
         left: 0;
+        width: 100%;
+        height: 100%;
+        max-width: none;
+        max-height: none;
         border-radius: 0;
         border: none;
+        padding: 0;
     }
 }
 
-.padding {
-    padding: 0.5rem;
+.inner {
     width: 100%;
     height: 100%;
-
-    @media screen and (max-width: 768px) {
-        padding: 0;
-    }
+    overflow: hidden;
 }
 
-.content_bg {
-    position: absolute;
-    inset: 1rem;
-    background-color: var(--bg-darkgray-accenttwo);
-    width: calc(100% - 2rem);
-    height: calc(100% - 2rem);
-}
-
-.content {
-    position: relative;
+.flex_wrapper {
     display: flex;
     flex-direction: column;
-    overflow: hidden;
     width: 100%;
-    min-height: 100%;
-    background-color: var(--color-palesmoke);
-    border-radius: .5rem;
-    z-index: 50;
-    padding: 1rem;
-
-    @media screen and (max-width: 768px) {
-        border-radius: 0;
-        padding: 0;
-    }
+    height: 100%;
 }
 
 .searchbar_wrapper {
@@ -102,11 +85,20 @@
     }
 }
 
+.searchbar_content {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+    flex: 1;
+    padding: 1rem;
+}
+
 .close_btn {
     position: absolute;
     display: block;
-    top: -2rem;
-    right: -2rem;
+    top: -2.5rem;
+    right: -2.5rem;
     padding: .5rem;
     margin: 0;
     border: none;
@@ -131,15 +123,4 @@
     @media only screen and (max-width: 768px), (max-height: 700px) {
         display: none;   
     }
-}
-
-.searchbar_content {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    overflow-y: auto;
-    flex: 1;
-    //border-radius: .5rem;
-    padding: 1rem;
-    //background-color: var(--bg-darkgray-accenttwo);
 }
